# purejaxql

./: .gitignore  distributed_debug.py  pyproject.toml
purejaxql/: craftax_wrappers.py  pqn_atari.py  pqn_gymnax.py  pqn_gymnax_flat.py  pqn_gymnax_flattened.py  pqn_minatar.py  pqn_rnn_craftax.py  pqn_rnn_craftax_scaled.py  pqn_rnn_gymnax.py  pqn_rnn_gymnax_flat.py  pqn_vdn_rnn_jaxmarl.py  utils.py
purejaxql/config/: config.yaml  pqn_rnn_craftax.yaml
purejaxql/config/alg/: pqn_cartpole.yaml  pqn_rnn_craftax.yaml  pqn_vdn_rnn_smax.yaml
tests/: conftest.py  test_pqn_gymnax.py  test_pqn_gymnax_flat.py  test_pqn_gymnax_flattened.py  test_pqn_rnn_gymnax.py  test_pqn_rnn_gymnax_flat.py
