[project]
name = "purejaxql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.2",
    "gymnax>=0.0.8",
    "hydra-core>=1.3.2",
    "jax[cuda12]>=0.4.35",
    "jaxmarl>=0.0.2",
    "wandb>=0.18.7",
    "xtils",
]

[tool.uv.sources]
xtils = { git = "https://github.com/jessefarebro/xtils" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["purejaxql"]

[dependency-groups]
dev = ["pytest>=8.3.3"]
