[project]
name = "purejaxql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "chex>=0.1.86",
    "gym<=0.23.1",
    "gymnax<=0.0.5",
    "hydra-auto-schema>=0.0.7",
    "hydra-core>=1.3.2",
    "hydra-zen>=0.13.0",
    "jax[cuda12]==0.4.26",
    "jaxtyping>=0.2.38",
    "rich>=13.9.4",
    "safetensors>=0.5.3",
    "typeguard==4.1.5",
    "wandb>=0.19.7",
    "xtils>=0.1.0",
]

[project.optional-dependencies]
atari = [
    "envpool>=0.8.4",
]

[tool.uv.sources]
xtils = [{ git = "https://github.com/jessefarebro/xtils" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["purejaxql"]
[dependency-groups]
dev = ["pytest-regressions>=2.5.0", "pytest>=8.3.3"]

[tool.ruff.lint]
ignore = ["F722"]
